Fix spacing in search suggestions

--- a/src/renderer/scss/component/_search.scss
+++ b/src/renderer/scss/component/_search.scss
@@ -51,24 +51,29 @@
   background-color: var(--search-bg-color);
   cursor: pointer;
   display: flex;
-  align-items: center;
-  text-overflow: ellipsis;
+  flex-direction: row;
+  justify-items: flex-start;
   font-family: 'metropolis-medium';
 
   &:not(:first-of-type) {
     border-top: 1px solid var(--search-item-border-color);
   }
+
+  .icon {
+    flex-shrink: 0;
+  }
 }
 
 .wunderbar__suggestion-label {
+  overflow: hidden;
   padding-left: $spacing-vertical;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .wunderbar__suggestion-label--action {
   margin-left: $spacing-vertical * 1/3;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .wunderbar__active-suggestion {
